--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -53,26 +53,26 @@ Human modified environments are increasing, causing global changes that other sp
 
 # REGISTERED REPORT DETAILS
 
- - **Level of bias:** This registered report was written (Jul 2021) prior to collecting any data (Level 6 at Peer Community in Registered Reports).
+ - **Level of bias = 6** This registered report was written (Jul 2021) prior to collecting any data.
  - **Programmatic registered report:** One Stage 2 article for each species (3 in total) will result from this one Stage 1 registered report.
 
 # INTRODUCTION
 
-Human modified environments are increasing [e.g., @liu2020high; @wu2011quantifying; @goldewijk2001estimating], causing global changes that other species must adjust to or suffer from [e.g., @ciani1986intertroop; @chejanovski2017experimental; @federspiel2017adjusting; @alberti2015eco]. Behavioral flexibility (hereafter 'flexibility') could be key: individuals interact with their environment through behavior, making it crucial to an ecologically valid understanding of how species adjust to environmental changes [@lee2021animal]. One of the top priorities for behavioral research to maximize conservation progress is to determine which cognitive abilities and behaviors can predict the ability to adjust to human modified environments and whether these can be manipulated [@moseby2016harnessing]. The rare research that manipulates behavior in a conservation context usually focuses on training specific behaviors (e.g., predator recognition through predator exposure) to improve individual success in the wild [e.g., @moseby2012can; @west2018predator; @jolly2018out; @ross2019reversing; see review in @tetzlaff2019effects]. However, training a general cognitive ability, such as flexibility -- the ability to rapidly adapt behavior to changes through learning throughout the lifetime [see the theory behind this definition in @mikhalevich_is_2017] -- has the potential to change a whole suite of behaviors and more broadly influence success in adjusting to human modified environments. 
+Human modified environments are increasing [e.g., @liu2020high; @wu2011quantifying; @goldewijk2001estimating], causing global changes that other species must adjust to or suffer from [e.g., @ciani1986intertroop; @chejanovski2017experimental; @federspiel2017adjusting; @alberti2015eco]. Behavioral flexibility (hereafter 'flexibility') could be key: individuals interact with their environment through behavior, making it crucial to an ecologically valid understanding of how species adjust to environmental changes [@lee2021animal]. One of the top priorities for behavioral research to maximize conservation progress is to determine which cognitive abilities and behaviors can predict the ability to adjust to human modified environments and whether these can be manipulated [@moseby2016harnessing]. The rare research that manipulates behavior in a conservation context usually focuses on training specific behaviors (e.g., predator recognition through predator exposure) to improve individual success in the wild [@moseby2012can; @west2018predator; @jolly2018out; @ross2019reversing; see review in @tetzlaff2019effects]. However, training a general cognitive ability, such as flexibility -- the ability to rapidly adapt behavior to changes through learning throughout the lifetime [see the theory behind this definition in @mikhalevich_is_2017] -- has the potential to change a whole suite of behaviors and more broadly influence success in adjusting to human modified environments. 
 
-Environments where informational cues about resources vary in a heterogenous (but non-random) way across space and time are hypothesized to open a pathway for species to functionally detect and react to such cues via flexibility [@mikhalevich_is_2017]. Human modified environments likely provide a different set of informational cues that vary heterogeneously across space and time, and the species that are successful in such environments are likely those who are able to detect and track such cues. Because heterogeneous environments are hypothesized to select for flexibility, we expect that experimentally manipulating environments to be more hetereogenous will result in an increase in flexibility in individuals, which will then increase their success and survival in such environments (Figure 1). Success and survival can relate to any number of variables regarding the usage of and investment in resources, from improved foraging efficiency to increased dispersal into human modified environments to placing nests in more protective locations. Measures of success and survival depend on the particular populations in their particular environments. 
+Environments where informational cues about resources vary in a heterogenous (but non-random) way across space and time are hypothesized to open a pathway for species to functionally detect and react to such cues via flexibility [@mikhalevich_is_2017]. Human modified environments likely provide a different set of informational cues that vary heterogeneously across space and time, and the species that are successful in such environments are likely those who are able to detect and track such cues. Because heterogeneous environments are hypothesized to select for flexibility, we expect that experimentally manipulating environments to be more hetereogenous will result in an increase in flexibility in individuals, which will then increase their success and survival in such environments (Figure 1). Success and survival can relate to any number of variables regarding the usage of and investment in resources, from improved foraging efficiency to increased dispersal into human modified environments to placing nests in more protective locations. Whether a measure of success or survival is predicted to relate to flexibility depends on what is already known about the particular population and their particular environment. 
 
 &nbsp;
 
 <img width="100%" src="mi1Figdag.png">
 
-**Figure 1.** The theory behind this research illustrated by a directed acyclic graph (DAG). We assume that heterogeneity causes more behavioral flexibility, which then causes better survival in human modified environments.
+**Figure 1.** The theory behind this research illustrated by a directed acyclic graph (DAG). We assume that more heterogeneity causes more flexibility, which then causes better survival in human modified environments.
 
 &nbsp;
 
-If social learning is used by a particular population, it can increase the rate at which individuals learn about the location and presence of resources [e.g., @belmaker2012learning; @Heinerman2015robots; @lihoreau2011local]. If this is the case, then‚ rather than training all individuals in a population to attend to the timing of an available resource, experimenters could train some individuals and then use social learning to spread this information to more individuals in that population. Observers would learn about specific behaviors to engage in rather than being trained in a general cognitive ability, however the more behaviors observers learn, the better they will be able to suceed in changing environments. Additionally, over the course of a flexibility manipulation, observers might learn to pay more attention to social information because the environmental heterogeneity involved in this manipulation would make it useful to continue to attend to social information rather than learning the underlying rules of the experiment.
+If social learning, the ability to acquire and use information obtained by watching others, is used by a particular population, it can increase the rate at which individuals learn about the location and presence of resources [e.g., @belmaker2012learning; @Heinerman2015robots; @lihoreau2011local]. If this is the case, rather than training all individuals in a population to attend to the timing of an available resource, experimenters could train some individuals and then rely on social learning to spread this information to more individuals in that population. Observers would learn about specific behaviors to engage in rather than being trained in a general cognitive ability, however the more behaviors observers learn, the better they will be able to suceed in changing environments. Additionally, over the course of an experiment that manipulates flexibility, observers might learn to pay more attention to social information because the increase environmental heterogeneity could make it useful to continue to attend to social information, rather than learning the underlying rules of the experiment and thereafter attending less to social information.
 
-This investigation asks whether flexibility can be increased by experimentally increasing environmental heterogeneity (via serial reversal learning and/or the regularity of feeder openings), whether such an increase can help species survive in human modified environments, and whether survival information spreads faster through social learning. We explore whether it is even possible to take insights from highly divergent species and apply them to address critical conservation challenges, which pushes the limits in terms of understanding how conserved these abilities may be and to what extent they can be shaped by the environment. We aim to conduct flexibility interventions in two flexible species that are successful in human modified environments (great-tailed grackles and California scrub jays) to understand how flexibility relates to success and whether social learning increases the rate of behavioral change, and implement these interventions in a threatened species (toutouwai) to determine whether flexibility as a generalizable cognitive ability can be trained and whether such training improves survival in human modified environments (Figure 2). The results will substantially advance our understanding of the causes and consequences of flexibility, linking behavior to environmental change, cognition, and success in human modified environments through a comparative and global framework.
+This investigation asks whether flexibility can be increased by experimentally increasing environmental heterogeneity (via serial reversal learning and/or the regularity of whether a given feeder is open or not), whether such an increase can help species survive in human modified environments, and whether information about the location and availablity of resources spreads faster through social learning. We explore whether it is even possible to take insights from highly divergent species and apply them to address critical conservation challenges, which pushes the limits in terms of understanding how conserved these abilities may be and to what extent they can be shaped by the environment. We aim to conduct flexibility interventions in two flexible species that are successful in human modified environments (great-tailed grackles and California scrub jays) to understand how flexibility relates to success and survival and whether social learning increases the rate of behavioral change, and implement these interventions in a threatened species (toutouwai) to determine whether flexibility as a generalizable cognitive ability can be trained and whether such training improves survival in human modified environments (Figure 2). The results will substantially advance our understanding of the causes and consequences of flexibility, linking behavior to environmental change, cognition, and success in human modified environments through a comparative and global framework.
 
 
 # RESEARCH QUESTIONS
@@ -86,7 +86,7 @@ This investigation asks whether flexibility can be increased by experimentally i
 **Prediction 1 alternative 2:** Flexibility can be increased in some populations, but not others. This would indicate that flexibility manipulations may not work for all populations, and that the effectiveness of such experiments should first be tested in the population of interest before including such an intervention in a conservation plan. If flexibility is not manipulatable in threatened populations, this would indicate that they are likely not very successful in human modified environments because of their inability to change their behavior with changing circumstances, and that flexibility is not trainable. If flexibility is not manipulatable in populations that are successful in human modified environments, this could indicate that they might have used flexibility in the past when originally forming the association, but the need to maintain flexibility in their repertoire is no longer necessary. In populations where flexibility is not manipulatable, this would indicate that the abilities involved in tracking changing resources in the environment are independent of the abilities involved in surviving in human modified environments.
 
 
-## Q2: Does survival information spread faster through social learning?
+## Q2: Does information spread faster through social learning?
 
 **Prediction 2:** Individuals (observers) who learn about resources by watching those individuals (demonstrators) who were in the flexibility manipulation, are **faster** to use such resources than observers who were not exposed to demonstrators.
 
@@ -106,11 +106,29 @@ This investigation asks whether flexibility can be increased by experimentally i
 
 ### Great-tailed grackles (*Quiscalus mexicanus*)
 
-**Background:** Great-tailed grackles are flexible [@logan2016flexibilityproblem; @logan2019flexmanip], highly associated with human modified environments [@johnson2001great], and have been rapidly expanding their geographic range across North America over the past 140 years [@wehtje2003range]. They are social and polygamous, and eat a diversity of human foods as well as foraging on insects and on substrates for other natural food items [@johnson2001great]. Males tend to be the socially dominant sex [@johnson2000male] and also the sex that disperses away from their natal area [@sevchik2019dispersal]. We are currently in the middle of long-term data collection on grackles to answer questions about manipulating flexibility using serial reversal learning [@logan2019flexmanip], the predictibility of their space use [@mccune2020spaceuse], and their foraging breadth [@logan2019flexforaging]. In the future, we will conduct additional analyses on this data that are relevant to the current investigation. @Rodrigo2021gtgr found that more grackles are present and more foraging events occur during garbage pick ups when garbage tends to spill out of the bags, thus increasing food availability. Attending to garbage trucks, potentially across space and time, is an example of how flexibility can help individuals meet foraging needs in the context of changing environmental cues.
+**Background:** Great-tailed grackles are flexible [@logan2016flexibilityproblem; @logan2019flexmanip], highly associated with human modified environments [@johnson2001great], and have been rapidly expanding their geographic range across North America over the past 140 years [@wehtje2003range]. They are social and polygamous, and eat a diversity of human foods as well as foraging on insects and on substrates for other natural food items [@johnson2001great]. Males tend to be the socially dominant sex [@johnson2000male] and also the sex that disperses away from their natal area [@sevchik2019dispersal]. @Rodrigo2021gtgr found that more grackles are present and more foraging events occur during garbage pick ups when garbage tends to spill out of the bags, thus increasing food availability. Attending to garbage trucks, potentially across space and time, is an example of how flexibility can help individuals meet foraging needs in the context of changing environmental cues. We are in the middle of long-term data collection on grackles to answer questions about manipulating flexibility using serial reversal learning [@logan2019flexmanip], the predictibility of their space use [@mccune2020spaceuse], and their foraging breadth [@logan2019flexforaging]. In the future, we will conduct additional analyses on this data that are relevant to the current investigation. 
 
 **Table 1.** Study design for the great-tailed grackle research.
 
-```{r designgtgr, eval=TRUE, warning=FALSE, results='asis', echo=TRUE, include=TRUE}
+```{r designgtgr, eval=TRUE, echo=F, message=F, warnings=F, results='asis', include=TRUE}
+var md = require('markdown-it')()
+                .use(require('markdown-it-multimd-table'));
+
+    const exampleTable =
+    "|             |          Grouping           || \n" +
+    "First Header  | Second Header | Third Header | \n" +
+    " ------------ | :-----------: | -----------: | \n" +
+    "Content       |          *Long Cell*        || \n" +
+    "Content       |   **Cell**    |         Cell | \n" +
+    "                                               \n" +
+    "New section   |     More      |         Data | \n" +
+    "And more      | With an escaped '\\|'       || \n" +
+    "[Prototype table]                              \n";
+
+    console.log(md.render(exampleTable));
+```
+
+```{r designgtgrtest, eval=TRUE, warning=FALSE, results='asis', echo=TRUE, include=TRUE}
 d <- read.csv(url("https://raw.githubusercontent.com/ManyIndividuals/ManyIndividuals/main/Files/rrs/mi1studydesignGTGR.csv"), header=F, sep=",", stringsAsFactors=F) 
 
 colnames(d) <- c("Question","Hypothesis","Sampling plan","Analysis plan","Rationale for deciding the sensitivity of the test for confirming or disconfirming the hypothesis","Interpretation given different outcomes","Theory that could be shown wrong by the outcomes")
