--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -49,7 +49,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # ABSTRACT
 
-Human modified environments are increasing, causing global changes that other species must adjust to or suffer from. Behavioral flexibility (hereafter 'flexibility') could be key: individuals interact with their environment through behavior, making it crucial to an ecologically valid understanding of how species adjust to environmental changes. One of the top priorities for behavioral research to maximize conservation progress is to determine which cognitive abilities and behaviors can predict the ability to adjust to human modified environments and whether these can be manipulated. The rare research that manipulates behavior in a conservation context trains specific behaviors (e.g., predator recognition through predator exposure) to improve individual success in the wild. However, training a general cognitive ability, such as behavioral flexibility (i.e., the ability to rapidly adapt behavior to changes through learning), has the potential to change a whole suite of behaviors and more broadly influence success in adjusting to human modified environments. This project asks whether flexibility can be increased by experimentally increasing environmental heterogeneity, whether such an increase can help species survive in human modified environments, and whether survival information spreads faster through social learning. We explore whether it is even possible to take insights from highly divergent species and apply them to address critical conservation challenges, which pushes the limits in terms of understanding how conserved these abilities may be and to what extent they can be shaped by the environment. We aim to 1) conduct flexibility interventions in two flexible species that are successful in human modified environments (great-tailed grackles and California scrub jays) to understand how flexibility relates to success and whether social learning increases the rate of behavioral change; and 2) implement the effective interventions in a threatened species (toutouwai) to determine whether flexibility as a generalizable cognitive ability can be trained and whether such training improves survival in human-modified environments. This research will significantly advance our understanding of the causes and consequences of flexibility, linking behavior to environmental change, cognition, and success in human modified environments through a comparative and global framework.
+Human modified environments are increasing, causing global changes that other species must adjust to or suffer from. Behavioral flexibility (hereafter 'flexibility') could be key: individuals interact with their environment through behavior, making it crucial to an ecologically valid understanding of how species adjust to environmental changes. One of the top priorities for behavioral research to maximize conservation progress is to determine which cognitive abilities and behaviors can predict the ability to adjust to human modified environments and whether these can be manipulated. The rare research that manipulates behavior in a conservation context trains specific behaviors (e.g., predator recognition through predator exposure) to improve individual success in the wild. However, training a general cognitive ability, such as behavioral flexibility (i.e., the ability to rapidly adapt behavior to changes through learning), has the potential to change a whole suite of behaviors and more broadly influence success in adjusting to human modified environments. This project asks whether flexibility can be increased by experimentally increasing environmental heterogeneity, whether such an increase can help species survive in human modified environments, and whether survival information spreads faster through social learning. We explore whether it is even possible to take insights from highly divergent species and apply them to address critical conservation challenges, which pushes the limits in terms of understanding how conserved these abilities may be and to what extent they can be shaped by the environment. We aim to 1) conduct flexibility interventions in two flexible species that are successful in human modified environments (great-tailed grackles and California scrub-jays) to understand how flexibility relates to success and whether social learning increases the rate of behavioral change; and 2) implement the effective interventions in a threatened species (toutouwai) to determine whether flexibility as a generalizable cognitive ability can be trained and whether such training improves survival in human-modified environments. This research will significantly advance our understanding of the causes and consequences of flexibility, linking behavior to environmental change, cognition, and success in human modified environments through a comparative and global framework.
 
 # REGISTERED REPORT DETAILS
 
@@ -70,9 +70,9 @@ Environments where informational cues about resources vary in a heterogenous (bu
 
 &nbsp;
 
-If social learning, the ability to acquire and use information obtained by watching others, is used by a particular population, it can increase the rate at which individuals learn about the location and presence of resources [e.g., @belmaker2012learning; @Heinerman2015robots; @lihoreau2011local]. If this is the case, rather than training all individuals in a population to attend to the timing of an available resource, experimenters could train some individuals and then rely on social learning to spread this information to more individuals in that population. Observers would learn about specific behaviors to engage in rather than being trained in a general cognitive ability, however the more behaviors observers learn, the better they will be able to suceed in changing environments. Additionally, over the course of an experiment that manipulates flexibility, observers might learn to pay more attention to social information because the increase environmental heterogeneity could make it useful to continue to attend to social information, rather than learning the underlying rules of the experiment and thereafter attending less to social information.
+If social learning, the ability to acquire and use information obtained by watching others, is used by a particular population, it can increase the rate at which individuals learn about the location and presence of resources [e.g., @belmaker2012learning; @Heinerman2015robots; @lihoreau2011local]. If this is the case, rather than training all individuals in a population to attend to the timing of an available resource, experimenters could train some individuals and then rely on social learning to spread this information to more individuals in that population. Observers would learn about specific behaviors to engage in rather than being trained in a general cognitive ability, however the more behaviors observers learn, the better they will be able to succeed in changing environments. Additionally, over the course of an experiment that manipulates flexibility, observers might learn to pay more attention to social information because increased environmental heterogeneity could make it useful to continue to attend to social information [@laland1996social; @whitehead2010conserving], rather than learning the underlying rules of the experiment and thereafter attending less to social information.
 
-This investigation asks whether flexibility can be increased by experimentally increasing environmental heterogeneity (via serial reversal learning and/or the regularity of whether a given feeder is open or not), whether such an increase can help species survive in human modified environments, and whether information about the location and availablity of resources spreads faster through social learning. We explore whether it is even possible to take insights from highly divergent species and apply them to address critical conservation challenges, which pushes the limits in terms of understanding how conserved these abilities may be and to what extent they can be shaped by the environment. We aim to conduct flexibility interventions in two flexible species that are successful in human modified environments (great-tailed grackles and California scrub jays) to understand how flexibility relates to success and survival and whether social learning increases the rate of behavioral change, and implement these interventions in a threatened species (toutouwai) to determine whether flexibility as a generalizable cognitive ability can be trained and whether such training improves survival in human modified environments (Figure 2). The results will substantially advance our understanding of the causes and consequences of flexibility, linking behavior to environmental change, cognition, and success in human modified environments through a comparative and global framework.
+This investigation asks whether flexibility can be increased by experimentally increasing environmental heterogeneity (via serial reversal learning and/or the regularity of whether a given feeder is open or not), whether such an increase can help species survive in human modified environments, and whether information about the location and availablity of resources spreads faster through social learning. We explore whether it is even possible to take insights from highly divergent species and apply them to address critical conservation challenges, which pushes the limits in terms of understanding how conserved these abilities may be and to what extent they can be shaped by the environment. We aim to conduct flexibility interventions in two flexible species that are successful in human modified environments (great-tailed grackles and California scrub-jays) to understand how flexibility relates to success and survival and whether social learning increases the rate of behavioral change, and implement these interventions in a threatened species (toutouwai) to determine whether flexibility as a generalizable cognitive ability can be trained and whether such training improves survival in human modified environments (Figure 2). The results will substantially advance our understanding of the causes and consequences of flexibility, linking behavior to environmental change, cognition, and success in human modified environments through a comparative and global framework.
 
 
 # RESEARCH QUESTIONS
@@ -106,7 +106,7 @@ This investigation asks whether flexibility can be increased by experimentally i
 
 ### Great-tailed grackles (*Quiscalus mexicanus*)
 
-**Background:** Great-tailed grackles are flexible [@logan2016flexibilityproblem; @logan2019flexmanip], highly associated with human modified environments [@johnson2001great], and have been rapidly expanding their geographic range across North America over the past 140 years [@wehtje2003range]. They are social and polygamous, and eat a diversity of human foods as well as foraging on insects and on substrates for other natural food items [@johnson2001great]. Males tend to be the socially dominant sex [@johnson2000male] and also the sex that disperses away from their natal area [@sevchik2019dispersal]. @Rodrigo2021gtgr found that more grackles are present and more foraging events occur during garbage pick ups when garbage tends to spill out of the bags, thus increasing food availability. Attending to garbage trucks, potentially across space and time, is an example of how flexibility can help individuals meet foraging needs in the context of changing environmental cues. We are in the middle of long-term data collection on grackles to answer questions about manipulating flexibility using serial reversal learning [@logan2019flexmanip], the predictibility of their space use [@mccune2020spaceuse], and their foraging breadth [@logan2019flexforaging]. In the future, we will conduct additional analyses on this data that are relevant to the current investigation. 
+**Background:** Great-tailed grackles are flexible [@logan2016flexibilityproblem; @logan2019flexmanip], highly associated with human modified environments [@johnson2001great], and have been rapidly expanding their geographic range across North America over the past 140 years [@wehtje2003range]. They are social and polygamous, and eat a diversity of human foods as well as foraging on insects and on substrates for other natural food items [@johnson2001great]. Males tend to be the socially dominant sex [@johnson2000male] and also the sex that disperses away from their natal area [@sevchik2019dispersal]. @Rodrigo2021gtgr found that more grackles are present and more foraging events occur during garbage pick ups when garbage tends to spill out of the bags, thus increasing food availability. Attending to garbage trucks, potentially across space and time, is an example of how flexibility can help individuals meet foraging needs in the context of changing environmental cues. We are in the middle of long-term data collection on grackles to answer questions about manipulating flexibility using serial reversal learning [@logan2019flexmanip], the predictability of their space use [@mccune2020spaceuse], and their foraging breadth [@logan2019flexforaging]. In the future, we will conduct additional analyses on this data that are relevant to the current investigation. 
 
 **Table 1.** Study design for the great-tailed grackle research.
 
@@ -140,7 +140,7 @@ knitr::kable(d)
 
 **Q1: Do flexibility manipulated individuals differ in their visits to outdoor cafes and garbage dumpsters on regular days (when there is more food availability) than on holidays when they are closed (thus reduced food availability)?**
 
- - **Prediction 1.1:** If individuals rely more on flexibility, they will likely decrease the frequency and duration of their visits on holidays because other environmental cues could indicate the lack of food availability (e.g., reduced human presence, no visible food, no garbge trucks or garbage spilled on the ground). This is because flexibility is the functional tracking of resources across time and space: one knows a variety of places to obtain food and prefers to forage at those with higher pay offs. If no food is available at a usual food location, then the more functional choice is to go somewhere else that does have food. 
+ - **Prediction 1.1:** If individuals rely more on flexibility, they will likely decrease the frequency and duration of their visits on holidays because other environmental cues could indicate the lack of food availability (e.g., reduced human presence, no visible food, no garbage trucks or garbage spilled on the ground). This is because flexibility is the functional tracking of resources across time and space: one knows a variety of places to obtain food and prefers to forage at those with higher pay offs. If no food is available at a usual food location, then the more functional choice is to go somewhere else that does have food. 
  - **Prediction 1.2:** If individuals rely more on what-where-when memory (WWW, remembering what food was where and when from a previous experience they had) [@clayton_episodic-like_1998; @clayton_prometheus_2003], they will likely increase the frequency and duration of their visits on holidays because the closure is a violation of their expectations. These expectations are based on associations between food and this place and time that have been built from multiple past experiences. Therefore, they would likely keep checking this location, which is expected to have more food availability at this time.
  - **Prediction 1.3:** If there is no difference in the frequency and/or duration of visits between regular days and holidays, this could indicate that the flexibility manipulation did not manipulate an ability that is linked to foraging visits to cafes and dumpsters. 
  - **Prediction 1.4:** If the holiday frequency of visits increases while the duration decreases, this could indicate that WWW memory is being used because individuals keep checking the location they expect food to be, but that these visits are short and used for checking for food cues (including looking for human presence), which is likely faster than stopping to eat food that is present. 
@@ -160,7 +160,28 @@ Predictions are the same as in the Research Question: Q2 section, except the com
 
 ### Jays
 
-**Background:** California scrub-jays (*Aphelocoma californica*, hereafter "CASJ"), a singular, monogamous breeder, are increasing in abundance and range size and highly successful in natural, suburban, and urban areas [@blair1996land; @curry2017california]. CASJ forage primarily on mast (acorns, hazelnuts, etc.) that they cache throughout their territory to eat all year. But they are also opportunistic omnivores and specifically need high-fat and high-protein arthropods to feed to nestlings and fledglings [@curry2017california]. Nesting and foraging substrate can be drastically different in human modified environments compared to natural areas, but it is unknown whether suburban and urban jays persist through behavioral adaptations.
+**Background:** Jay species in the genus *Aphelocoma* exhibit a diversity of social systems and success in colonizing suburban and urban areas. California scrub-jays (*A. californica*, hereafter "CASJ"), a singular, monogamous breeder, are increasing in abundance, expanding the range size and highly successful in natural, suburban, and urban areas [@blair1996land; @curry2017california]. CASJ forage primarily on mast (acorns, hazelnuts, etc.) that they cache throughout their territory to eat all year. But they are also opportunistic omnivores and specifically need high-fat and high-protein arthropods to feed to nestlings and fledglings [@curry2017california]. Nesting and foraging substrate can be drastically different in human modified environments compared to natural areas [@tuomainen2011behavioural], but it is unknown whether suburban and urban jays persist through behavioral adaptations. To test for selection on behavioral flexibility in human modified environments, we will compare behavioral flexibility, foraging and nest success of jays in suburban areas to those in natural areas. We will experimentally manipulate the flexibility of jays in human modified environments to determine whether manipulated jays are subsequently more successful than control jays. 
+
+In contrast, the Florida scrub-jay (*A. coerulescens*; hereafter "FLSJ") is a threatened species endemic and range-restricted to central Florida. FLSJ have colonized suburban habitats, however suburban populations of FLSJ steadily decline after colonization events [Bowman pers. comm.]. This is potentially due to higher rates of brood reduction through nestling starvation [@shawkey2004why] and the lack of nutritionally complete prey items [@shawkey2004why] in suburban habitats. It is possible that behavioral flexibility in foraging breadth underlies the persistence of CASJ in suburban areas relative to FLSJ. We aim to compare behavioral flexibility of these two species to determine whether this trait is related to the greater persistence of CASJ in human-dominated areas and we will test whether manipulating flexibility of FLSJ will increase the foraging breadth and reproductive success of FLSJ in human modified environments.
+
+
+**Q1: Do CASJ and FLSJ in human modified and natural areas differ in baseline behavioral flexibility?**
+
+ - **Prediction 1.1:** If suburban jays are *more* flexible than jays in natural areas, this implies that flexibility is related to the ability to persist in human modified environments where spatial and temporal heterogeneity of resources is high. 
+ - **Prediction 1.2:** If suburban jays are *less* flexible than jays in natural areas, this implies that human modification of the environment has led to less spatial and temporal heterogeneity of resources. For example, the prevalence of bird feeders in suburban areas leads to consistently available food.
+ - **Prediction 1.3:** If suburban jays are *equally* flexible as jays in natural areas, this implies that additional behavioral traits [i.e. boldness; @lapiedra2017urbanization] facilitate success in human modified environments
+ 
+**Q2: How does baseline behavioral flexibility compare between CASJ and FLSJ?**
+
+ - **Prediction 2.1:** CASJ are *more* flexible than FLSJ
+ - **Prediction 2.2:** CASJ are *less* flexible than FLSJ
+ - **Prediction 2.3:** CASJ and FLSJ are *equally* flexible
+ 
+**Q3: Does manipulating behavioral flexibility affect success of CASJ and FLSJ in human modified environments?**
+
+- **Prediction 3.1:**
+
+
 
 **Figure 4.**
 
