--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -160,26 +160,29 @@ Predictions are the same as in the Research Question: Q2 section, except the com
 
 ### Jays
 
-**Background:** Jay species in the genus *Aphelocoma* exhibit a diversity of social systems and success in colonizing suburban and urban areas. California scrub-jays (*A. californica*, hereafter "CASJ"), a singular, monogamous breeder, are increasing in abundance, expanding the range size and highly successful in natural, suburban, and urban areas [@blair1996land; @curry2017california]. CASJ forage primarily on mast (acorns, hazelnuts, etc.) that they cache throughout their territory to eat all year. But they are also opportunistic omnivores and specifically need high-fat and high-protein arthropods to feed to nestlings and fledglings [@curry2017california]. Nesting and foraging substrate can be drastically different in human modified environments compared to natural areas [@tuomainen2011behavioural], but it is unknown whether suburban and urban jays persist through behavioral adaptations. To test for selection on behavioral flexibility in human modified environments, we will compare behavioral flexibility, foraging and nest success of jays in suburban areas to those in natural areas. We will experimentally manipulate the flexibility of jays in human modified environments to determine whether manipulated jays are subsequently more successful than control jays. 
+**Background:** Jay species in the genus *Aphelocoma* exhibit a diversity of social systems and success in colonizing suburban and urban areas. California scrub-jays (*A. californica*, hereafter "CASJ"), a singular, monogamous breeder, are increasing in abundance, expanding their range size and are highly successful in natural, suburban, and urban areas [@blair1996land, @curry2017california]. In contrast, the Florida scrub-jay (*A. coerulescens*; hereafter "FLSJ") is a threatened species endemic and range-restricted to xeric oak scrub habitat in Florida [@woolfenden1996florida]. 
 
-In contrast, the Florida scrub-jay (*A. coerulescens*; hereafter "FLSJ") is a threatened species endemic and range-restricted to central Florida. FLSJ have colonized suburban habitats, however suburban populations of FLSJ steadily decline after colonization events [Bowman pers. comm.]. This is potentially due to higher rates of brood reduction through nestling starvation [@shawkey2004why] and the lack of nutritionally complete prey items [@shawkey2004why] in suburban habitats. It is possible that behavioral flexibility in foraging breadth underlies the persistence of CASJ in suburban areas relative to FLSJ. We aim to compare behavioral flexibility of these two species to determine whether this trait is related to the greater persistence of CASJ in human-dominated areas and we will test whether manipulating flexibility of FLSJ will increase the foraging breadth and reproductive success of FLSJ in human modified environments.
+Both species forage primarily on mast (acorns, hazelnuts, etc.) that they cache throughout their territory to eat all year. But they are also opportunistic omnivores and specifically need high-fat and high-protein arthropods to feed to nestlings and fledglings [@curry2017california]. Nesting and foraging substrate can be drastically different in human modified environments compared to natural areas [@tuomainen2011behavioural], but it is unknown whether suburban and urban jays persist through behavioral adaptations. FLSJ have colonized suburban habitats, however suburban populations of FLSJ steadily decline after colonization events [Bowman pers. comm.]. This is potentially due to suboptimal habitat resulting from fire suppression [@woolfenden1996florida], higher rates of brood reduction through nestling starvation [@shawkey2004why] and the lack of nutritionally complete prey items [@shawkey2004why] in suburban habitats. It is possible that behavioral flexibility in habitat use and foraging breadth underlies the ability of some jays to persist in human-dominated areas. 
+
+We aim to compare behavioral flexibility within species between suburban and natural populations, then between species to determine whether this trait is related to the greater persistence of CASJ in human-dominated areas. We will test whether manipulating flexibility increases the foraging breadth and reproductive success of jays in human modified environments. Manipulating flexibility of a subset of individuals has the potential to affect the population because previous research demonstrates that both species have the capacity to use foraging information discovered by others to flexibly change their behavior [social learning; @mccune2018cognition, @midford2000social].
 
 
-**Q1: Do CASJ and FLSJ in human modified and natural areas differ in baseline behavioral flexibility?**
+**Q1: Do jay populations in human modified areas differ in baseline behavioral flexibility compared to populations in natural areas?**
 
  - **Prediction 1.1:** If suburban jays are *more* flexible than jays in natural areas, this implies that flexibility is related to the ability to persist in human modified environments where spatial and temporal heterogeneity of resources is high. 
  - **Prediction 1.2:** If suburban jays are *less* flexible than jays in natural areas, this implies that human modification of the environment has led to less spatial and temporal heterogeneity of resources. For example, the prevalence of bird feeders in suburban areas leads to consistently available food.
  - **Prediction 1.3:** If suburban jays are *equally* flexible as jays in natural areas, this implies that additional behavioral traits [i.e. boldness; @lapiedra2017urbanization] facilitate success in human modified environments
  
-**Q2: How does baseline behavioral flexibility compare between CASJ and FLSJ?**
+**Q2: Are CASJ more behaviorally flexible than FLSJ in general?**
 
- - **Prediction 2.1:** CASJ are *more* flexible than FLSJ
- - **Prediction 2.2:** CASJ are *less* flexible than FLSJ
- - **Prediction 2.3:** CASJ and FLSJ are *equally* flexible
+ - **Prediction 2.1:** If CASJ are *more* flexible than FLSJ, this may explain the range expansion and greater success of CASJ in human modified environments.
+ - **Prediction 2.2:** If CASJ are *less* flexible than FLSJ, it implies that flexibility is not related to persistence in human modified environments and that behavioral flexibility is instead related to a different, unknown social or environmental characteristic.
+ - **Prediction 2.3:** If CASJ and FLSJ are *equally* flexible, then flexibility is not related to persistence in human modified environments and the level of flexibility is potentially an evolutionary conserved trait from the *Aphelocoma* common ancestor.
  
 **Q3: Does manipulating behavioral flexibility affect success of CASJ and FLSJ in human modified environments?**
 
-- **Prediction 3.1:**
+Predictions are the same as in the general Research Question: Q1 section.
+
 
 
 
