Revise jay background

--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -164,7 +164,7 @@ Predictions are the same as in the Research Question: Q2 section, except the com
 
 Both species forage primarily on mast (acorns, hazelnuts, etc.) that they cache throughout their territory to eat all year. But they are also opportunistic omnivores and specifically need high-fat and high-protein arthropods to feed to nestlings and fledglings [@curry2017california]. Nesting and foraging substrate can be drastically different in human modified environments compared to natural areas [@tuomainen2011behavioural], but it is unknown whether suburban and urban jays persist through behavioral adaptations. FLSJ have colonized suburban habitats, however suburban populations of FLSJ steadily decline after colonization events [Bowman pers. comm.]. This is potentially due to suboptimal habitat resulting from fire suppression [@woolfenden1996florida], higher rates of brood reduction through nestling starvation [@shawkey2004why] and the lack of nutritionally complete prey items [@shawkey2004why] in suburban habitats. It is possible that behavioral flexibility in habitat use and foraging breadth underlies the ability of some jays to persist in human-dominated areas. 
 
-We aim to compare behavioral flexibility within species between suburban and natural populations, then between species to determine whether this trait is related to the greater persistence of CASJ in human-dominated areas. We will test whether manipulating flexibility increases the foraging breadth and reproductive success of jays in human modified environments. Manipulating flexibility of a subset of individuals has the potential to affect the population because previous research demonstrates that both species have the capacity to use foraging information discovered by others to flexibly change their behavior [social learning; @mccune2018cognition, @midford2000social].
+We aim to compare behavioral flexibility within species, between suburban and natural populations to determine if variation in flexibility relates to variation in persistence. Subsequently we will compare flexibility between species to determine whether this trait is related to the greater persistence of CASJ in human-dominated areas. Lastly, we will test whether manipulating flexibility increases the foraging breadth and reproductive success of jays in human modified environments. Manipulating flexibility of a subset of individuals has the potential to affect the population because previous research demonstrates that both species have the capacity to use foraging information discovered by others to flexibly change their behavior [social learning; @mccune2018cognition, @midford2000social].
 
 
 **Q1: Do jay populations in human modified areas differ in baseline behavioral flexibility compared to populations in natural areas?**
