--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,20 @@
+@phdthesis{mccune2018cognition,
+  title={Cognition gone wild: a test of the social intelligence hypothesis in wild birds},
+  author={McCune, Kelsey Brenna},
+  year={2018}
+}
+
+@article{midford2000social,
+  title={Social learning of a novel foraging patch in families of free-living Florida scrub-jays},
+  author={Midford, Peter E and Hailman, Jack P and Woolfenden, Glen E},
+  journal={Animal Behaviour},
+  volume={59},
+  number={6},
+  pages={1199--1207},
+  year={2000},
+  publisher={Elsevier}
+}
+
 @misc{woolfenden1996florida,
   title={Florida scrub-jay (Aphelocoma coerulescens), Birds of North America},
   author={Woolfenden, G.E. and Fitzpatrick, J.W.},
